* Changelog

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.12...dev][Unreleased]]

*** Added
*** Changed
*** Deprecated
*** Removed
*** Fixed

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.11...v0.3.12][v0.3.12]] - 2023-11-29

*** Added
+ *TAT.py*: =edges[int]= and =edge_by_name(str)= are the new interface for indexing edges in tensor, the previous
  interface has been deprecated.
+ *TAT.py*: Add copy constructor for =Symmetry=, =Edge= and =Tensor=.
*** Changed
+ *TAT.hpp*: The names of all inplace functions are renamed with a suffix =_=.
+ *TAT.py*: The names of all inplace functions are renamed with a suffix =_=.
*** Deprecated
+ *TAT.py*: =edges(str)= and =edges(int)= is deprecated for tensor.
*** Removed
+ *tetraux*: Package tetraux is removed, because it is useless since ansatz product state removed.
+ *tetragono*: =gm_bin_run= and =gm_alpha= are removed. =gm_bin_run= is removed since it only works for sweep sampling,
  but there is a better way to do so: sampling multiple Markov Chain in the same process. =gm_alpha= is removed since
  user should set attribute of the state manually instead.
*** Fixed
+ *TAT.hpp*: Fix type mutability information in declaration of LAPACK function =?gesvd=.

** [[https://github.com/USTC-TNS/TAT/compare/v0.3.10...v0.3.11][v0.3.11]] - 2023-11-22

*** Added
+ *tetragono*: Add =gm_conf_eq= to equilibrium the configuration of the sampling lattice.
+ *TAT.py*: Add =TAT.parity=, =TAT.arrow= to convert =+1= to =False= and =-1= to =True=.
*** Changed
+ *tetragono*: The physics edge index should be non-negative now.
+ *tetragono*: Use MPI IO to speed up the performance of configurations. Previously, every process will read all
  configuration and choose a single configuration when reading, and allgather all configuration and write to file when
  writing. Now, the program uses MPI IO to write file parallelly, and read the corresponding configuration directly
  without read all configurations.