@@ -3,19 +3,10 @@ name: build
 on: [push, pull_request]
 
 jobs:
-  test_trigger:
-    name: trigger for run test
-    runs-on: ubuntu-latest
-    if: "! contains(toJSON(github.event.commits.*.message), '[skip ci]')"
-
-    steps:
-      - name: nothing
-        run: echo this is an empty job
 
   test_TAT_hpp:
     name: test TAT.hpp
     runs-on: ubuntu-latest
-    needs: [test_trigger]
 
     steps:
       - name: checkout
@@ -37,7 +28,6 @@ jobs:
   test_lazy_py:
     name: test lazy.py
     runs-on: ubuntu-latest
-    needs: [test_trigger]
     steps:
       - name: checkout
         uses: actions/checkout@v3
@@ -54,7 +44,6 @@ jobs:
   test_scalapack_py:
     name: test scalapack.py
     runs-on: ubuntu-latest
-    needs: [test_trigger]
     steps:
       - name: checkout
         uses: actions/checkout@v3
@@ -155,8 +144,8 @@ jobs:
         run: |
           source emsdk/emsdk_env.sh
           cd PyTAT
-          export CMAKEFLAGS=-DTAT_MATH_LIBRARIES=$PWD/.pyodide-xbuildenv/xbuildenv/pyodide-root/packages/.libs/lib/${{ matrix.lapack }}
-          export MAKEFLAGS=--parallel=2
+          export SKBUILD_CMAKE_DEFINE=TAT_MATH_LIBRARIES=$PWD/.pyodide-xbuildenv/xbuildenv/pyodide-root/packages/.libs/lib/${{ matrix.lapack }}
+          export CMAKE_BUILD_PARALLEL_LEVEL=4
           pyodide build --exports pyinit
       - name: test
         run: |
@@ -311,12 +300,12 @@ jobs:
           CIBW_ARCHS: all
 
           CIBW_BEFORE_ALL_LINUX: yum install -y epel-release && yum install -y openblas-devel || apk add openblas-dev
-          CIBW_BEFORE_ALL_WINDOWS: cmd /c python .github\scripts\get_openblas_for_windows.py && choco install -y ninja
+          CIBW_BEFORE_ALL_WINDOWS: python .github/scripts/get_openblas_for_windows.py
           CIBW_BEFORE_ALL_MACOS: ""
 
-          CIBW_ENVIRONMENT_LINUX: MAKEFLAGS=--parallel=2
-          CIBW_ENVIRONMENT_WINDOWS: MAKEFLAGS=--parallel=2 CMAKEFLAGS="-GNinja|-DCMAKE_CXX_COMPILER=clang++|-DTAT_MATH_LIBRARIES=../../../../lib/libopenblas"
-          CIBW_ENVIRONMENT_MACOS: MAKEFLAGS=--parallel=3 CMAKEFLAGS="-DCMAKE_OSX_ARCHITECTURES=${{ matrix.mac_arch }}"
+          CIBW_ENVIRONMENT_LINUX: CMAKE_BUILD_PARALLEL_LEVEL=4
+          CIBW_ENVIRONMENT_WINDOWS: CMAKE_BUILD_PARALLEL_LEVEL=4 SKBUILD_CMAKE_ARGS=-GNinja SKBUILD_CMAKE_DEFINE="CMAKE_C_COMPILER=clang;CMAKE_CXX_COMPILER=clang++;TAT_MATH_LIBRARIES=D:/a/TAT/TAT/lib/libopenblas.lib"
+          CIBW_ENVIRONMENT_MACOS: CMAKE_BUILD_PARALLEL_LEVEL=6 SKBUILD_CMAKE_DEFINE="CMAKE_OSX_ARCHITECTURES=${{ matrix.mac_arch }}"
 
           CIBW_REPAIR_WHEEL_COMMAND_WINDOWS: cmd /c python -m pip install delvewheel && python -m delvewheel repair --wheel-dir {dest_dir} {wheel} --add-path bin
           CIBW_BUILD_VERBOSITY: 1
@@ -416,6 +405,8 @@ jobs:
         run: sudo apt-get install -y emacs
       - name: export to markdown
         run: emacs CHANGELOG.org --batch -f org-md-export-to-markdown --kill
+      - name: install setuptools_scm
+        run: python -m pip install setuptools_scm
       - name: generate release description
         run: python .github/scripts/generate_release_description.py
       - name: download artifacts
