@@ -1,5 +1,5 @@
 [build-system]
-requires = ["setuptools >= 62.0.0", "wheel"]
+requires = ["setuptools >= 62.0.0", "wheel", "setuptools_scm"]
 build-backend = "setuptools.build_meta"
 
 [project]
